1podManifestEpam.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxepam
  labels:
    name: nginxepam

spec:
  containers:
  - name: nginxepam
    image: eccervantes/linkedin:epam
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
