3errorPodlog.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer
  labels:
    name: myap
spec:
  containers:
  - name: nginxepam
    image: eccervantes/linkedin:epam
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
  - name: nginxibm
    image: eccervantes/linkedin:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
