9hello-deployment.epam-ibm-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      role: hello
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: epam
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
           memory: "128Mi"
           cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm
spec:
  replicas: 1
  selector:
    matchLabels:
      role: ibm
  template:
    metadata:
      labels:
        role: ibm
    spec:
      containers:
      - name: ibm
        image: eccervantes/linkedin:latest
        ports:
        - containerPort: 80
        resources:
          limits:
           memory: "128Mi"
           cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epam
spec:
  replicas: 1
  selector:
    matchLabels:
      role: epam
  template:
    metadata:
      labels:
        role: epam
    spec:
      containers:
      - name: epam
        image: eccervantes/linkedin:epam
        ports:
        - containerPort: 80
        resources:
          limits:
           memory: "128Mi"
           cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
    #nodePort: 30000
  selector:
    role: hello

---

apiVersion: v1
kind: Service
metadata:
  name: epam
spec:
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 30000
  selector:
    role: epam

---

apiVersion: v1
kind: Service
metadata:
  name: ibm
spec:
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 30000
  selector:
    role: ibm
